--- a/src/App.css
+++ b/src/App.css
@@ -74,6 +74,11 @@ header.active {
 }
 
 @media  screen and (max-width: 768px) {
+  header {
+    width: 100%;
+    box-shadow: 0 2px 28px 0 rgba(0, 0, 0, 0.36);
+    z-index: 10;
+  }
   header .icon{
     display: none;
   }
@@ -86,11 +91,11 @@ header.active {
     position: absolute;
     display: block;
     background-color: #fff;
-    left: 50px;
+    left: 150px;
     top: 75px;
     transition: 0.5s;
     width: 100%;
-    height: 30vh;
+    height: 100vh;
     z-index: 5;
   }
 
@@ -350,7 +355,7 @@ h3 {
 .services {
   text-align: center;
   background-color: #f8f9fe;
-  padding: 50px 0 80px;
+  padding: 50px 0 90px;
 }
 
 .services .box {
@@ -376,7 +381,7 @@ h3 {
 .services .text h2 {
   font-weight: 500;
   font-size: 22px;
-  margin-bottom: 10px;
+  margin-bottom: 0px;
 }
 
 .services p {
@@ -482,7 +487,7 @@ skill .heading {
 .work {
   background-color: #08071c;
   padding: 40px;
-  height: 170vh;
+  height: 140vh;
 }
 
 .work .heading {
@@ -570,3 +575,235 @@ skill .heading {
   opacity: 0;
   transition: 0.5s;
 }
+
+.work .box:nth-child(4)::after,
+.work .box:nth-child(3)::after,
+.work .box:nth-child(2)::after,
+.work .box:nth-child(5)::after {
+  width: 300px;
+  height: 500px;
+  background-color: rgba((18, 22, 25, 0.925), green, blue, alpha);
+}
+
+.work .box:nth-child(6)::after,
+.work .box:nth-child(1)::after {
+  width: 758px;
+  height: 550px;
+  background-color: rgba(18, 22, 25, 0.925);
+}
+
+.work .box:hover::after {
+  opacity: 1;
+}
+
+.work .box .icon,
+.work .box .text {
+  position: relative;
+  z-index: 4;
+}
+
+.work .box p {
+  color: #fff;
+  margin-top: 20px;
+}
+
+.work .box .icon {
+  margin-top: 25%;
+}
+
+.iconWork {
+  position: absolute;
+  width: 100%;
+}
+
+.iconWork:nth-child(1) {
+  left: 90px;
+}
+
+.iconWork:nth-child(2) {
+  left: 180px;
+}
+
+footer {
+  background-color: #08071c;
+  color: #fff;
+  padding: 100px 0 0 0 ;
+}
+
+footer p {
+  color: #fff;
+}
+
+footer .scoialIcon i {
+  background: transparent;
+  border: 1px solid #fff;
+  margin-bottom: 10px;
+}
+
+footer h2 {
+  color: #fff;
+  margin-bottom: 30px;
+  font-size: 20px;
+}
+
+footer li {
+  color: #fff;
+  margin-bottom: 15PX;
+}
+
+footer li:before {
+  content: "";
+  font-size: 40px;
+  vertical-align: middle;
+  line-height: 10px;
+  margin-right: 20px;
+  color: #38d16a;
+}
+
+footer .box p {
+  margin: 0;
+  margin-top: 15px;
+}
+
+footer span {
+  color: #38d16a;
+  opacity: 1;
+}
+
+footer .icon {
+  margin-top: 20px;
+  display: flex;
+}
+
+footer .icon i {
+  color: #38d16a;
+  margin-right: 20px;
+  width: 20px;
+  height: 20px;
+}
+
+.legal {
+  margin-top: 40px;
+  display: flex;
+  justify-content: space-between;
+  border-top: 1px solid rgba(255, 255, 25, 0.5);
+}
+
+.grid1 {
+  display: grid;
+  grid-template-columns: repeat(4,1fr);
+  grid-gap: 30px;
+}
+
+@media screen and (max-width: 768px) {
+  .left,
+  .right {
+    width: 100%;
+  }
+  .home .container{
+    flex-direction: column;
+  }
+  .home {
+    width: 100%;
+    height: 134vh;
+  }
+
+  .home .img {
+    width: 100%;
+    height: 100%;
+    position: relative;
+  }
+
+  .home img {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transform: scale(1);
+  }
+
+  .grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .about .container {
+    flex-direction: column;
+  }
+
+  .about .img {
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+  }
+  
+  .about .img::after {
+    display: none;
+  }
+  .skill {
+    width: 100%;
+  }
+
+  .grid1 {
+    display: grid;
+    grid-template-columns: repeat(1,1fr);
+    grid-gap: 30px;
+  }
+
+  .legal {
+    display: block;
+    width: 100%;
+    margin-top: 20px;
+    border-top: 1px solid rgba(255, 255, 25, 0.5);
+    padding-bottom: 10px;
+    text-align: center;
+  }
+
+  .home {
+    height: auto;
+  }
+
+  .about p {
+    margin-bottom: 5px;
+    text-align: justify;
+  }
+  
+  
+  .about .right {
+    padding-right: 30px;
+  }
+  
+  .about .img {
+    position: relative;
+    display: block;
+    margin: 20px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 100%;
+  
+  }
+  
+  .about .img::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: -60px;
+    right: 0;
+    width: 600px;
+    height: 86vh;
+    z-index: -1;
+  }
+
+  .skill .left, .right {
+    width: 100%;
+  }
+
+  .skill .container {
+    display: flex;
+    flex-direction: column;
+  }
+  
+}
+.container1 {
+  max-width: 85%;
+  margin: auto;
+}
+
